--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ayuk Kabel</title>
+  <title>Ayuk abel</title>
   <style>
     body {
       margin: 0;
@@ -51,7 +51,7 @@
   <div class="card">
     <h1>Selamat Datang, Ayuk! ❤️</h1>
     <p>Website ini dibuat spesial untuk Ayuk abel~</p>
-    <a href="https://tiktok.com" class="btn" target="_blank">Lihat TikTok Ayuk</a>
+    <a href="https://www.tiktok.com/@maybe.yourgirl" class="btn" target="_blank">Lihat TikTok Ayuk</a>
   </div>
 </body>
 </html>
