--- a/index.html
+++ b/index.html
@@ -1,82 +1,138 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ayuk Abel</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Athar Novendri</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      scroll-behavior: smooth;
+    }
+
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #fff0f5;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #4facfe, #00f2fe);
+      color: #fff;
+      overflow-x: hidden;
+    }
+
+    header {
       text-align: center;
-      padding: 30px;
+      padding: 60px 20px;
     }
 
-    img {
-      width: 200px;
+    header h1 {
+      font-size: 2.8em;
+      margin-bottom: 10px;
+      animation: fadeIn 1.5s ease-out;
+    }
+
+    header p {
+      font-size: 1.2em;
+      animation: slideUp 2s ease-out;
+    }
+
+    .profile-img {
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 4px solid #fff;
+      margin: 20px auto;
+      display: block;
+      animation: popIn 2s ease;
+    }
+
+    section {
+      padding: 40px 20px;
+      background: rgba(255, 255, 255, 0.1);
+      margin: 20px;
       border-radius: 15px;
-      margin-top: 20px;
+      backdrop-filter: blur(10px);
+      animation: fadeIn 2s ease;
     }
 
-    .hidden {
-      display: none;
+    section h2 {
+      font-size: 1.8em;
+      margin-bottom: 10px;
+      color: #fff;
     }
 
-    .flower {
-      font-size: 50px;
-      animation: float 2s infinite;
-      margin: 10px;
+    section p {
+      font-size: 1.1em;
+      line-height: 1.6em;
     }
 
-    @keyframes float {
-      0% { transform: translateY(0px); }
-      50% { transform: translateY(-10px); }
-      100% { transform: translateY(0px); }
+    footer {
+      text-align: center;
+      padding: 30px 20px;
+      font-size: 0.9em;
     }
 
-    button {
-      background-color: #ff69b4;
-      color: white;
-      border: none;
+    .btn {
+      background: #fff;
+      color: #00c6ff;
       padding: 10px 20px;
-      font-size: 18px;
-      border-radius: 8px;
-      cursor: pointer;
+      border-radius: 25px;
+      text-decoration: none;
+      display: inline-block;
       margin-top: 20px;
+      font-weight: bold;
+      transition: 0.3s;
     }
 
-    button:hover {
-      background-color: #ff1493;
+    .btn:hover {
+      background: #00c6ff;
+      color: white;
     }
 
-    .tiktok-button {
-      background-color: black;
-      margin-top: 30px;
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes slideUp {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes popIn {
+      from { transform: scale(0.5); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
     }
   </style>
 </head>
 <body>
 
-  <h1>Hai Ayuk Abel! 🌸</h1>
-  <img src="IMG_4831.jpeg" alt="Ayuk Abel" />
+  <header>
+    <img src="athar.jpg" alt="Foto Athar Novendri" class="profile-img">
+    <h1>Athar Novendri</h1>
+    <p>Siswa MTsN 1 Palembang - Kelas 8</p>
+  </header>
 
-  <div id="bukaArea">
-    <button onclick="bukaDong()">BUKA DONG</button>
-  </div>
+  <section>
+    <h2>👦 Tentang Saya</h2>
+    <p>Halo! Nama saya Athar Novendri, murid kelas 8 di MTsN 1 Palembang. Saya sangat suka belajar hal baru, terutama teknologi dan seni digital.</p>
+  </section>
 
-  <div id="bungaArea" class="hidden">
-    <div class="flower">🌸🌸🌸🌸🌸</div>
-    <button class="tiktok-button" onclick="window.open('https://www.tiktok.com/@maybe.yourgirl', '_blank')">
-      LIAT TIKTOK
-    </button>
-  </div>
+  <section>
+    <h2>🏊‍♂️ Hobi Saya</h2>
+    <p>Saya sangat suka berenang! Selain itu, saya juga senang mendesain, bermain game edukatif, dan membuat web sederhana seperti ini.</p>
+  </section>
 
-  <script>
-    function bukaDong() {
-      document.getElementById("bungaArea").classList.remove("hidden");
-      document.getElementById("bukaArea").classList.add("hidden");
-    }
-  </script>
+  <section>
+    <h2>📱 Sosial Media</h2>
+    <p>Kunjungi juga akun TikTok saya:</p>
+    <a href="https://www.tiktok.com/@maybe.yourgirl" target="_blank" class="btn">Buka TikTok</a>
+  </section>
+
+  <footer>
+    &copy; 2025 Athar Novendri. Dibuat dengan cinta ❤️.
+  </footer>
 
 </body>
 </html>
