--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to right, #00c6ff, #0072ff);
+      background: linear-gradient(135deg, #120136, #220046, #2c004f, #1d0042);
       color: white;
       overflow-x: hidden;
     }
@@ -147,11 +147,11 @@
   <section id="sosial">
     <h2>📱 Sosial Media</h2>
     <p>Kunjungi akun TikTok saya untuk melihat hal-hal seru lainnya:</p>
-    <p><a href="https://www.tiktok.com/@atrrrry" target="_blank" style="color: #fff; text-decoration: underline;">@maybe.yourgirl</a></p>
+    <p><a href="https://www.tiktok.com/@atrrrty" target="_blank" style="color: #fff; text-decoration: underline;">@atrrrty</a></p>
   </section>
 
   <footer>
-    &copy; 2025 Athar Novendri..
+    &copy; 2025 Athar Novendri
   </footer>
 
 </body>
