--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   </section>
 
   <footer>
-    &copy; 2025 Athar Novendri..
+    &copy; 2025 Athar Novendri. Dibuat dengan semangat dan hati ❤️.
   </footer>
 
 </body>
