--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
   <section id="sosial">
     <h2>📱 Sosial Media</h2>
     <p>Kunjungi akun TikTok saya untuk melihat hal-hal seru lainnya:</p>
-    <p><a href="https://www.tiktok.com/@atrrrty" target="_blank" style="color: #fff; text-decoration: underline;">@atrrrty</a></p>
+    <p><a href="https://www.tiktok.com/@atrrrr.y" target="_blank" style="color: #fff; text-decoration: underline;">@atrrrr.y</a></p>
   </section>
 
   <footer>
-    &copy; 2025 Athar Novendri. Dibuat dengan semangat dan hati ❤️.
+    &copy; 2025 Athar Novendri.🤷‍♂️.
   </footer>
 
 </body>
