--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
       background: linear-gradient(135deg, #120136, #220046, #2c004f, #1d0042);
       color: white;
       overflow-x: hidden;
+      position: relative;
+    }
+
+    header, section, footer {
+      animation: fadeIn 1.5s ease;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     header {
@@ -65,6 +75,7 @@
 
     nav a:hover {
       text-decoration: underline;
+      color: #ff91f3;
     }
 
     section {
@@ -78,9 +89,14 @@
       margin-bottom: 15px;
     }
 
-    section p {
+    section p, section a {
       font-size: 1.1em;
       line-height: 1.7;
+    }
+
+    section a {
+      color: #ffe0f7;
+      text-decoration: underline;
     }
 
     footer {
@@ -93,6 +109,27 @@
 
     audio {
       display: none;
+    }
+
+    /* Bunga jatuh animasi */
+    .bunga {
+      position: fixed;
+      top: -10px;
+      left: calc(100% * var(--i));
+      font-size: 20px;
+      animation: turun 10s linear infinite;
+      z-index: 0;
+    }
+
+    @keyframes turun {
+      0% {
+        transform: translateY(0);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(100vh);
+        opacity: 0;
+      }
     }
 
     @media (min-width: 768px) {
@@ -115,10 +152,18 @@
 </head>
 <body>
 
+  <!-- Suara -->
   <audio autoplay loop>
     <source src="backsound.mp3" type="audio/mpeg">
     Browser kamu tidak mendukung audio.
   </audio>
+
+  <!-- Efek bunga -->
+  <span class="bunga" style="--i:0;">🌸</span>
+  <span class="bunga" style="--i:0.2;">🌸</span>
+  <span class="bunga" style="--i:0.4;">🌸</span>
+  <span class="bunga" style="--i:0.6;">🌸</span>
+  <span class="bunga" style="--i:0.8;">🌸</span>
 
   <nav>
     <a href="#tentang">Tentang</a>
@@ -147,11 +192,11 @@
   <section id="sosial">
     <h2>📱 Sosial Media</h2>
     <p>Kunjungi akun TikTok saya untuk melihat hal-hal seru lainnya:</p>
-    <p><a href="https://www.tiktok.com/@atrrrr.y" target="_blank" style="color: #fff; text-decoration: underline;">@atrrrr.y</a></p>
+    <p><a href="https://www.tiktok.com/@atrrrr.y" target="_blank">@atrrrr.y</a></p>
   </section>
 
   <footer>
-    &copy; 2025 Athar Novendri.🤷‍♂️.
+    &copy; 2025 Athar Novendri. 🤷‍♂️
   </footer>
 
 </body>
