--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       padding: 60px 20px;
       max-width: 800px;
       margin: auto;
+      text-align: center;
     }
 
     section h2 {
@@ -158,11 +159,21 @@
     <p>Hobi utama saya adalah berenang. Saya juga suka membuat desain digital, membuat website seperti ini, dan kadang bermain game edukatif atau coding kecil-kecilan.</p>
   </section>
 
-  <!-- Sosial Media -->
-  <section id="sosial">
+  <!-- Sosial Media (versi baru yang kamu minta) -->
+  <section id="sosial" style="text-align: center; padding: 60px 20px;">
     <h2>📱 Sosial Media</h2>
-    <p>Kunjungi akun TikTok saya untuk melihat hal-hal seru lainnya:</p>
-    <p><a href="https://www.tiktok.com/@atrrrr.y" target="_blank">@atrrrr.y</a></p>
+    <p>Yuk hubungi atau follow aku di media sosial!</p>
+    <div style="margin-top: 20px;">
+      <a href="https://wa.me/6282282045700" target="_blank" style="margin: 0 10px;">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" width="50" style="filter: drop-shadow(0 0 10px purple);">
+      </a>
+      <a href="https://www.tiktok.com/@atrrrr.y" target="_blank" style="margin: 0 10px;">
+        <img src="https://cdn-icons-png.flaticon.com/512/3046/3046122.png" alt="TikTok" width="50" style="filter: drop-shadow(0 0 10px purple);">
+      </a>
+      <a href="https://instagram.com/atrrrrrj" target="_blank" style="margin: 0 10px;">
+        <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" width="50" style="filter: drop-shadow(0 0 10px purple);">
+      </a>
+    </div>
   </section>
 
   <!-- Footer -->
