--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <a href="https://www.tiktok.com/@atrrrr.y" target="_blank" style="margin: 0 10px;">
         <img src="https://cdn-icons-png.flaticon.com/512/3046/3046122.png" alt="TikTok" width="50" style="filter: drop-shadow(0 0 10px purple);">
       </a>
-      <a href="https://instagram.com/atrrrrj" target="_blank" style="margin: 0 10px;">
+      <a href="https://www.instagram.com/atrrrrj" target="_blank" style="margin: 0 10px;">
         <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" width="50" style="filter: drop-shadow(0 0 10px purple);">
       </a>
     </div>
