--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
       padding: 60px 20px;
       max-width: 800px;
       margin: auto;
-      text-align: center;
     }
 
     section h2 {
@@ -121,6 +120,31 @@
         font-size: 1.2em;
       }
     }
+
+    /* Sosial Media Ikon Glow */
+    .sosmed-icon {
+      display: inline-block;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(5px);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 0 15px rgba(0, 255, 255, 0.5);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .sosmed-icon:hover {
+      transform: scale(1.1);
+      box-shadow: 0 0 20px rgba(0, 255, 255, 0.8);
+    }
+
+    .sosmed-icon img {
+      width: 30px;
+      height: 30px;
+    }
   </style>
 </head>
 <body>
@@ -159,19 +183,19 @@
     <p>Hobi utama saya adalah berenang. Saya juga suka membuat desain digital, membuat website seperti ini, dan kadang bermain game edukatif atau coding kecil-kecilan.</p>
   </section>
 
-  <!-- Sosial Media (versi baru yang kamu minta) -->
-  <section id="sosial" style="text-align: center; padding: 60px 20px;">
+  <!-- Sosial Media -->
+  <section id="sosial">
     <h2>📱 Sosial Media</h2>
     <p>Yuk hubungi atau follow aku di media sosial!</p>
-    <div style="margin-top: 20px;">
-      <a href="https://wa.me/6282282045700" target="_blank" style="margin: 0 10px;">
-        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" width="50" style="filter: drop-shadow(0 0 10px purple);">
+    <div style="margin-top: 20px; display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
+      <a href="https://wa.me/6282282045700" target="_blank" class="sosmed-icon">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
       </a>
-      <a href="https://www.tiktok.com/@atrrrr.y" target="_blank" style="margin: 0 10px;">
-        <img src="https://cdn-icons-png.flaticon.com/512/3046/3046122.png" alt="TikTok" width="50" style="filter: drop-shadow(0 0 10px purple);">
+      <a href="https://www.tiktok.com/@atrrrr.y" target="_blank" class="sosmed-icon">
+        <img src="https://cdn-icons-png.flaticon.com/512/3046/3046122.png" alt="TikTok">
       </a>
-      <a href="https://www.instagram.com/atrrrrj" target="_blank" style="margin: 0 10px;">
-        <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" width="50" style="filter: drop-shadow(0 0 10px purple);">
+      <a href="https://instagram.com/atrrrrrj" target="_blank" class="sosmed-icon">
+        <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram">
       </a>
     </div>
   </section>
