--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <a href="https://www.tiktok.com/@atrrrr.y" target="_blank" class="sosmed-icon">
         <img src="https://cdn-icons-png.flaticon.com/512/3046/3046122.png" alt="TikTok">
       </a>
-      <a href="https://instagram.com/atrrrrrj" target="_blank" class="sosmed-icon">
+      <a href="https://instagram.com/atrrrrj" target="_blank" class="sosmed-icon">
         <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram">
       </a>
     </div>
