--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
     <a href="#tentang">Tentang</a>
     <a href="#hobi">Hobi</a>
     <a href="#sosial">Sosial Media</a>
+    <a href="#jasa">Jasa</a>
   </nav>
 
   <!-- Header -->
@@ -196,6 +197,25 @@
       </a>
       <a href="https://www.instagram.com/atrrrrj" target="_blank" class="sosmed-icon">
         <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram">
+      </a>
+    </div>
+  </section>
+
+  <!-- Jasa Pembuatan Website -->
+  <section id="jasa">
+    <h2>💻 Jasa Pembuatan Web</h2>
+    <p>Pengen punya website sekeren ini? Aku buka jasa pembuatan web dengan harga terjangkau, cocok buat kamu yang pengen:</p>
+    <ul style="margin-top: 15px; padding-left: 20px; line-height: 1.7;">
+      <li>📄 Web Biodata Pribadi</li>
+      <li>🌟 Web Kenangan Kelas </li>
+      <li>👯‍♀️ Web Kenangan Bareng Bestie</li>
+      <li>🎉 Web Undangan Digital</li>
+    </ul>
+    <p style="margin-top: 15px;">Harga mulai dari <strong style="color:#c09fff;">35 ribu rupiah aja!</strong></p>
+    <p>Kalau minat, langsung aja klik WhatsApp aku di bawah ini ya!</p>
+    <div style="margin-top: 15px;">
+      <a href="https://wa.me/6282282045700" target="_blank" class="sosmed-icon">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
       </a>
     </div>
   </section>
