--- a/index.html
+++ b/index.html
@@ -1,188 +1,21 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Athar Novendri</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      scroll-behavior: smooth;
-    }
-
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #120136, #1a0040, #240051, #1d003f);
-      color: white;
-      overflow-x: hidden;
-    }
-
-    header {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 60px 20px 40px;
-      text-align: center;
-    }
-
-    header img {
-      width: 160px;
-      height: 160px;
-      border-radius: 50%;
-      border: 4px solid white;
-      margin-bottom: 20px;
-    }
-
-    header h1 {
-      font-size: 2.5em;
-      font-weight: 600;
-    }
-
-    header p {
-      font-size: 1.1em;
-      margin-top: 5px;
-      font-weight: 300;
-    }
-
-    nav {
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(10px);
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      padding: 12px 0;
-      position: sticky;
-      top: 0;
-      z-index: 999;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-      transition: 0.3s;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-      color: #b88eff;
-    }
-
-    section {
-      padding: 60px 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-
-    section h2 {
-      font-size: 2em;
-      margin-bottom: 15px;
-    }
-
-    section p, section a {
-      font-size: 1.1em;
-      line-height: 1.7;
-    }
-
-    section a {
-      color: #a788ff;
-      text-decoration: underline;
-    }
-
-    footer {
-      text-align: center;
-      padding: 30px 20px;
-      font-size: 0.9em;
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(10px);
-    }
-
-    audio {
-      display: none;
-    }
-
-    .sosmed-icon {
-      display: inline-block;
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(5px);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 0 15px rgba(0, 255, 255, 0.5);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .sosmed-icon:hover {
-      transform: scale(1.1);
-      box-shadow: 0 0 20px rgba(0, 255, 255, 0.8);
-    }
-
-    .sosmed-icon img {
-      width: 30px;
-      height: 30px;
-    }
-
-    /* ANIMASI SCROLL */
-    .scroll-left, .scroll-right {
-      opacity: 0;
-      transform: translateX(100px);
-      transition: all 0.8s ease-out;
-    }
-
-    .scroll-left {
-      transform: translateX(-100px);
-    }
-
-    .scroll-left.show, .scroll-right.show {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  </style>
+  <!-- ... Bagian head tetap sama ... -->
 </head>
 <body>
+  <!-- ... Bagian nav dan header tetap sama ... -->
 
-  <!-- Backsound -->
-  <audio autoplay loop>
-    <source src="backsound.mp3" type="audio/mpeg">
-    Browser kamu tidak mendukung audio.
-  </audio>
-
-  <!-- Navigasi -->
-  <nav>
-    <a href="#tentang">Tentang</a>
-    <a href="#hobi">Hobi</a>
-    <a href="#sosial">Sosial</a>
-    <a href="#jasa">Jasa Web</a>
-  </nav>
-
-  <!-- Header -->
-  <header>
-    <img src="athar.jpg" alt="Foto Athar" />
-    <div>
-      <h1>Athar Novendri</h1>
-      <p>Siswa Kelas VIIIE - MTsN 1 Palembang</p>
-    </div>
-  </header>
-
-  <!-- Tentang Saya -->
   <section id="tentang" class="scroll-left">
     <h2>👋 Tentang Saya</h2>
     <p>Halo! Nama saya Athar Novendri. Saya adalah seorang siswa MTsN 1 Palembang, sekarang duduk di kelas VIIIE. Saya suka belajar hal-hal baru, terutama tentang teknologi, desain, dan hal-hal kreatif lainnya.</p>
   </section>
 
-  <!-- Hobi -->
   <section id="hobi" class="scroll-right">
     <h2>🏊‍♂️ Hobi Saya</h2>
     <p>Hobi utama saya adalah berenang. Saya juga suka membuat desain digital, membuat website seperti ini, dan kadang bermain game edukatif atau coding kecil-kecilan.</p>
   </section>
 
-  <!-- Sosial Media -->
   <section id="sosial" class="scroll-left">
     <h2>📱 Sosial Media</h2>
     <p>Yuk hubungi atau follow aku di media sosial!</p>
@@ -199,44 +32,92 @@
     </div>
   </section>
 
-  <!-- Jasa Web -->
+  <!-- Bagian Jasa Web yang diperbarui -->
   <section id="jasa" class="scroll-right">
     <h2>💻 Jasa Bikin Web Keren</h2>
-    <p>Aku buka jasa bikin web dengan harga terjangkau! Cocok buat kamu yang pengen punya web pribadi atau buat seru-seruan bareng teman-teman.</p>
-    <ul style="margin-top: 15px; line-height: 1.8;">
-      <li>📘 Web Biodata Pribadi seperti ini</li>
+    <p> Aku buka jasa bikin web dengan harga terjangkau seperti: </p>
+    <ul style="margin-top: 15px; line-height: 1.6;">
+      <li>📄 Web Biodata Pribadi seperti ini</li>
       <li>🎉 Web Kenangan Kelas / Bestie</li>
       <li>💌 Web Undangan Digital</li>
       <li>🎵 Bisa pakai backsound & animasi scroll</li>
       <li>🌐 Tampilan modern dan responsif</li>
-      <li>💸 Harga mulai dari <strong>Rp35.000</strong> aja!</li>
+      <li>🛠️ Harga mulai dari <strong>Rp35.000</strong></li>
       <li>💬 Minat? Hubungi aku via WhatsApp:
-        <a href="https://wa.me/6282282045700" target="_blank">klik di sini</a>
+        <a href="https://wa.me/6282282045700" target="_blank">https://wa.me/6282282045700</a>
       </li>
     </ul>
   </section>
 
-  <!-- Footer -->
+  <!-- Bagian AI tetap -->
+  <section id="ai" class="scroll-right">
+    <h2>🤖 Bot Interaktif</h2>
+    <p>Mau tau lebih tentang Athar? Kamu bisa tanya langsung lewat bot di bawah ini! Gunakan kata kunci pertanyaan yang tersedia ya 👇</p>
+    <input type="text" id="question" placeholder="Tulis pertanyaan di sini..." style="padding:10px; width:100%; margin:10px 0; border-radius:5px;" />
+    <button onclick="askBot()" style="padding:10px 20px; background-color:#a788ff; border:none; color:white; border-radius:5px;">Tanya!</button>
+    <button onclick="toggleKataKunci()" style="padding:10px 20px; margin-left:10px; background:#fff; color:#333; border-radius:5px;">Lihat Kata Kunci</button>
+
+    <div id="keywords" style="display:none; background:#111; color:#a0a0a0; padding:15px; border-radius:5px; margin-top:15px;">
+      <strong>❓ Contoh pertanyaan:</strong>
+      <ul style="margin-top:10px;">
+        <li>Siapa nama kamu</li>
+        <li>Sekolah di mana</li>
+        <li>Kelas berapa</li>
+        <li>Hobi kamu</li>
+        <li>Umur kamu</li>
+        <li>Keahlian kamu</li>
+        <li>Tujuan hidup kamu</li>
+      </ul>
+    </div>
+
+    <div id="answer" style="background:#222; color:white; padding:15px; border-radius:5px; margin-top:20px; min-height:60px;"></div>
+  </section>
+
   <footer>
-    &copy; 2025 Athar Novendri.🤷‍♂️. 
+    &copy; 2025 Athar Novendri. Web by Athar 💻
   </footer>
 
-  <!-- Script Animasi Scroll -->
+  <!-- Bagian script tetap -->
   <script>
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach((entry) => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add("show");
-        } else {
-          entry.target.classList.remove("show");
+    const memory = {
+      "siapa nama kamu": "Namaku Athar Novendri!",
+      "sekolah di mana": "Aku sekolah di MTsN 1 Palembang.",
+      "kelas berapa": "Aku kelas VIII-E.",
+      "hobi kamu": "Hobiku berenang, ngoding, dan desain digital.",
+      "umur kamu": "Aku lahir tahun 2011, jadi umurku 13 tahun.",
+      "keahlian kamu": "Aku bisa buat web biodata, web kenangan kelas, dan desain grafis.",
+      "tujuan hidup kamu": "Aku ingin jadi kreator digital yang bisa banggain orang tua dan temen-temen.",
+    };
+
+    function askBot() {
+      const question = document.getElementById("question").value.toLowerCase();
+      const answerBox = document.getElementById("answer");
+      answerBox.innerHTML = "";
+      const jawab = memory[question] || "Maaf, aku belum ngerti pertanyaan itu 😅";
+      let i = 0;
+      function typeWriter() {
+        if (i < jawab.length) {
+          answerBox.innerHTML += jawab.charAt(i);
+          i++;
+          setTimeout(typeWriter, 50);
+        }
+      }
+      typeWriter();
+    }
+
+    function toggleKataKunci() {
+      const box = document.getElementById("keywords");
+      box.style.display = box.style.display === "none" ? "block" : "none";
+    }
+
+    window.addEventListener('scroll', () => {
+      document.querySelectorAll('.scroll-left, .scroll-right').forEach(el => {
+        const top = el.getBoundingClientRect().top;
+        if (top < window.innerHeight - 100) {
+          el.style.opacity = 1;
         }
       });
     });
-
-    document.querySelectorAll(".scroll-left, .scroll-right").forEach((el) => {
-      observer.observe(el);
-    });
   </script>
-
 </body>
 </html>
